--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 <body>
     <div class="slider">
         <div class="slider__imgWrapper">
-            <div class="slider__slide slider__slide--show">
-                <img class="slider__img" src="assets/1.jpg">
+            <div class="slider__slide">
+                <img src="assets/1.jpg">
             </div>
             <div class="slider__slide">
-                <img class="slider__img" src="assets/2.jpg">
+                <img src="assets/2.jpg">
             </div>
             <div class="slider__slide">
-                <img class="slider__img" src="assets/3.jpg">
+                <img src="assets/3.jpg">
             </div>
+            
         </div>
     </div>
     </div>
